--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
-!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>Juegos Infantiles</title>
+    <link rel="icon" href="images/logo.png" type="image/png">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="portafolio.html">Portafolio</a></li>
+                <li class="logo-li"><a href="index.html"><img src="images/logo.png" alt="Logo" class="logo-img"></a></li>
+                <li><a href="sobre-nosotros.html">Sobre nosotros</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <main>
+        <h1>¡Bienvenidos a un Mundo de Diversión!</h1>
+        <img src="images/banner.jpeg" alt="Banner de juegos" class="banner-image">
+    </main>
+
+    <footer>
+        <section id="contacto">
+            <h2>Contacto</h2>
+            <p>Para contactar al desarrollador, por favor envíe un correo a <a href="mailto:desarrollador@example.com">desarrollador@example.com</a>.</p>
+        </section>
+    </footer>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
