conexión con el backend, añadimos api

--- a/portafolio.html
+++ b/portafolio.html
@@ -29,46 +29,35 @@
         <section class="clients-section">
             <h2>La Confianza de los Líderes de la Industria</h2>
             <p>Nos enorgullece ser el socio estratégico de algunas de las marcas más reconocidas a nivel nacional. Su confianza es nuestro mayor aval y nos impulsa a mantener los más altos estándares en cada proyecto que emprendemos.</p>
-            <ul class="client-logos-grid">
-                <li><a href="#"><img src="images/clients/tomarreto.webp" alt="Logo Irving Tomato"></a></li>
-                <li><a href="#"><img src="images/clients/sirloin.webp" alt="Logo Sirloin Stockade"></a></li>
-                <li><a href="#"><img src="images/clients/travesuras.webp" alt="Logo Travesuras"></a></li>
-            </ul>
+            
+            <!-- CONTENEDOR VACÍO PARA LOS LOGOS DE CLIENTES -->
+            <div id="client-logos-container" class="client-logos-grid">
+                <p>Cargando clientes...</p>
+            </div>
         </section>
 
         <section class="projects-section">
             <h2>Proyectos que Inspiran Sonrisas</h2>
             <p>Cada laberinto, cada pradera de juegos, es una obra de arte diseñada para estimular la imaginación y garantizar la seguridad. Aquí te presentamos algunos de nuestros proyectos más destacados, que reflejan nuestra pasión por la innovación y la excelencia.</p>
-            <div class="projects-grid">
-                <div class="project-card">
-                    <img src="images/projects/project1.webp" alt="Proyecto 1">
-                    <h3>Laberinto del Bosque Encantado</h3>
-                    <p>Un diseño inmersivo que transporta a los visitantes a un mundo mágico, con desafíos y sorpresas en cada esquina.</p>
-                </div>
-                <div class="project-card">
-                    <img src="images/projects/project2.webp" alt="Proyecto 2">
-                    <h3>Pradera de Aventuras Urbanas</h3>
-                    <p>Un espacio de juego innovador en el corazón de la ciudad, combinando elementos naturales con estructuras modernas.</p>
-                </div>
-                <div class="project-card">
-                    <img src="images/projects/project3.webp" alt="Proyecto 3">
-                    <h3>Jardín de los Secretos</h3>
-                    <p>Un laberinto botánico diseñado para la exploración tranquila y el descubrimiento de la naturaleza.</p>
-                </div>
-                <div class="project-card">
-                    <img src="images/projects/project4.webp" alt="Proyecto 4">
-                    <h3>Parque Temático Acuático</h3>
-                    <p>Integración de elementos de laberinto y juegos de agua para una experiencia refrescante y divertida.</p>
-                </div>
+            
+
+            <div id="projects-container" class="projects-grid">
+                <p>Cargando proyectos...</p>
             </div>
         </section>
 
     </main>
 
     <footer>
-        <!-- Footer content can go here -->
+        <section id="contacto">
+            <h2>Contacto</h2>
+            <p>Para contactar al desarrollador, por favor envíe un correo a <a href="mailto:desarrollador@example.com">desarrollador@example.com</a>.</p>
+        </section>
     </footer>
 
+
     <script src="js/main.js"></script>
+    <!-- NUEVO SCRIPT DEDICADO PARA LLAMAR A LA API -->
+    <script src="js/api.js"></script>
 </body>
 </html>
