añadimoss botón para el panel administrador, el backend ya tiene un login

--- a/Cliente-detalle.html
+++ b/Cliente-detalle.html
@@ -17,6 +17,7 @@
                 <li class="logo-li"><a href="index.html"><img src="images/logo.png" alt="Logo" class="logo-img"></a></li>
                 <li><a href="sobre-nosotros.html">Sobre nosotros</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="http://localhost:5071/" target="_blank">Admin Panel</a></li>
             </ul>
         </nav>
     </header>
