ajuste de diseño

--- a/contacto.html
+++ b/contacto.html
@@ -27,10 +27,8 @@
 
         <div class="contact-info-centered">
             <h3>Información de Contacto</h3>
-            <p><strong>Correo:</strong> info@laberintospraderas.com</p>
+            <p><strong>Correo:</strong> mario.a.gallegos@hotmail.com</p>
             <p><strong>Teléfono:</strong> +123 456 7890</p>
-            <p><strong>Dirección:</strong> Calle Ficticia 123, Ciudad, País</p>
-        </div>
 
         <div class="social-media">
             <h3>Síguenos en Redes Sociales</h3>
@@ -45,13 +43,6 @@
                     <img src="images/social/instagram.webp" alt="Instagram">
                     <span>@LaberintosPraderas</span>
                 </a>
-            </div>
-            <div class="social-link">
-                <a href="#">
-                    <img src="images/social/x.webp" alt="x">
-                    <span>@LaberintosPraderas</span>
-                </a>
-            </div>
         </div>
     </main>
 
