--- a/index.html
+++ b/index.html
@@ -22,9 +22,20 @@
     </header>
 
     <main>
-        <h1>¡Bienvenidos a un Mundo de Diversión!</h1>
-        <img src="images/banner.jpeg" alt="Banner de juegos" class="banner-image">
-    </main>
+    <section class="hero-index">
+        
+        <div class="hero-image-container">
+            <img src="images/banner.jpeg" alt="Banner de juegos" class="banner-image">
+            <div class="hero-overlay"></div> 
+        </div>
+        <div class="hero-text-content">
+            <h1>Expertos en Fabricar Sonrisas</h1>
+            <p class="hero-subtitle">Somos una empresa familiar con más de 10 años de experiencia, dedicada al diseño, fabricación e instalación de juegos infantiles, laberintos y áreas de entretenimiento seguras, duraderas e inolvidables.</p>
+            <a href="servicios.html" class="btn-cta">Descubre lo que Hacemos</a>
+        </div>
+
+    </section>
+</main>
 
     <footer>
         <section id="contacto">
