--- a/servicios.html
+++ b/servicios.html
@@ -38,7 +38,6 @@
                         <li>Diseños 100% personalizados</li>
                         <li>Asesoría en distribución del espacio</li>
                         <li>Materiales de alta resistencia y no tóxicos</li>
-                        <li>Visualización 3D del proyecto</li>
                     </ul>
                 </div>
             </div>
@@ -50,7 +49,7 @@
                 </div>
                 <div class="service-content">
                     <h3>Venta e Instalación de Juegos Tubulares</h3>
-                    <p>Ofrecemos un amplio catálogo de estructuras tubulares y camas de salto de la más alta calidad. Nuestro equipo de instaladores expertos se asegura de que cada proyecto se ensamble con la máxima precisión y siguiendo los más altos estándares de seguridad.</p>
+                    <p>Ofrecemos un amplio catálogo de estructuras tubulares de la más alta calidad. Nuestro equipo de instaladores expertos se asegura de que cada proyecto se ensamble con la máxima precisión y siguiendo los más altos estándares de seguridad.</p>
                     <ul>
                         <li>Catálogo con variedad de modelos</li>
                         <li>Instalación profesional y segura</li>
@@ -79,20 +78,20 @@
 
             <!-- Servicio 4 -->
             <div class="service-card">
-                <div class="service-image-placeholder">
-                    <p>[Imagen: Sillas y mesas coloridas listas para una fiesta infantil.]</p>
-                </div>
-                <div class="service-content">
-                    <h3>Renta de Sillas, Mesas y Mobiliario para Eventos</h3>
-                    <p>Complementa tu área de juegos o evento con nuestro servicio de renta de mobiliario. Ofrecemos sillas, mesas, y todo lo necesario para la comodidad de los padres y la organización de fiestas infantiles.</p>
-                    <ul>
-                        <li>Mobiliario infantil y para adultos</li>
-                        <li>Entrega y recogida a domicilio</li>
-                        <li>Precios competitivos</li>
-                        <li>Soluciones para todo tipo de eventos</li>
-                    </ul>
-                </div>
-            </div>
+    <div class="service-image-placeholder">
+        <p>[Imagen: Una vibrante área de camas de salto con secciones planas e inclinadas, rodeada de mallas de seguridad.]</p>
+    </div>
+    <div class="service-content">
+        <h3>Diseño y Fabricación de Áreas de Trampolines</h3>
+        <p>Impulsa la energía de tu negocio con nuestras áreas de camas de salto, diseñadas para ofrecer máxima diversión con la seguridad como prioridad. Desde un trampolín individual hasta complejos de salto interconectados, fabricamos soluciones a la medida para salones de fiestas, gimnasios y centros de entretenimiento.</p>
+        <ul>
+            <li>Estructuras de PTR soldado de alta resistencia para máxima durabilidad.</li>
+            <li>Diseños personalizados: camas planas, inclinadas e interconectadas.</li>
+            <li>Colchonetas de alto impacto y mallas de seguridad perimetrales.</li>
+            <li>Soluciones perfectas para maximizar el espacio y la rentabilidad de tu área.</li>
+        </ul>
+    </div>
+</div>
         </div>
     </main>
 
