--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -28,14 +28,14 @@
         <h2>Nuestros Pilares</h2>
         <ul class="pillar-list">
             <li>
-                <img src="images/seguridad.webp" alt="Seguridad primero">
+                <img src="images/seguridad.png" alt="Seguridad primero">
                 <div class="pillar-text">
                     <h3>Seguridad Ante Todo</h3>
                     <p>"Cada tubo, cada red y cada tornillo se instala pensando en la seguridad de los niños."</p>
                 </div>
             </li>
             <li>
-                <img src="images/calidad.webp" alt="Materiales de calidad">
+                <img src="images/calidad.png" alt="Materiales de calidad">
                 <div class="pillar-text">
                     <h3>Calidad y Durabilidad</h3>
                     <p>"Usamos solo los mejores materiales para garantizar que nuestros proyectos resistan el paso del tiempo y el juego más enérgico."</p>
