--- a/servicios.html
+++ b/servicios.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="paint-splats-background">
+            <img src="/images/splats/splat-blue.png" alt="Mancha de pintura azul" class="paint-splat splat-1">
+            <img src="/images/splats/splat-yellow.png" alt="Mancha de pintura amarilla" class="paint-splat splat-2">
+            <img src="/images/splats/splat-red.png" alt="Mancha de pintura roja" class="paint-splat splat-3">
+            <img src="/images/splats/splat-green.png" alt="Mancha de pintura verde" class="paint-splat splat-4">
+            <img src="/images/splats/splat-pink.png" alt="Mancha de pintura rosa" class="paint-splat splat-5">
+            <img src="/images/splats/splat-purple.png" alt="Mancha de pintura morada" class="paint-splat splat-6">
+            <img src="/images/splats/splat-cyan.png" alt="Mancha de pintura cyan" class="paint-splat splat-7">
+
+        </div>
     <header>
         <nav>
             <ul>
@@ -26,69 +36,72 @@
         <p class="intro-paragraph">Desde el diseño inicial de un área de juegos espectacular hasta los detalles finales de tu evento, ofrecemos una gama completa de servicios para garantizar que tu proyecto sea un éxito rotundo. Explora nuestras soluciones a continuación.</p>
 
         <div class="services-grid">
-            <!-- Servicio 1 -->
-            <div class="service-card">
-                <div class="service-image-placeholder">
-                    <p>[Imagen: Un espectacular laberinto tubular recién instalado en un centro comercial.]</p>
-                </div>
-                <div class="service-content">
-                    <h3>Fabricación y Diseño de Juegos a Medida</h3>
-                    <p>Transforma tu visión en una realidad. Trabajamos contigo para diseñar y fabricar áreas de juego únicas y personalizadas que se adaptan perfectamente a tu espacio y presupuesto, garantizando una experiencia inolvidable para los niños.</p>
-                    <ul>
-                        <li>Diseños 100% personalizados</li>
-                        <li>Asesoría en distribución del espacio</li>
-                        <li>Materiales de alta resistencia y no tóxicos</li>
-                    </ul>
-                </div>
-            </div>
+           <!-- Servicio 1: Zonas para Bebés -->
+<div class="service-card" data-full-image-url="images/AreaDeBebes.jpeg">
+    <!-- CORRECCIÓN: Usamos la clase 'service-image-container' que espera el CSS -->
+    <div class="service-image-container">
+        <img src="images/AreaDeBebes.jpeg" alt="Área de juegos suave para estimulación temprana de bebés" class="service-card-image">
+    </div>
+    <div class="service-content">
+        <h3>Zonas para Bebés y Estimulación Temprana</h3>
+        <p>Creamos espacios seguros, higiénicos y estimulantes diseñados específicamente para los más pequeños...</p>
+        <ul>
+            <li>Suelos y paredes acolchados para máxima seguridad.</li>
+            <li>Figuras de fomi, albercas de pelotas y juegos de baja altura.</li>
+            <li>Materiales hipoalergénicos, no tóxicos y fáciles de limpiar.</li>
+            <li>Diseños que promueven la exploración y el aprendizaje temprano.</li>
+        </ul>
+    </div>
+</div>
 
-            <!-- Servicio 2 -->
-            <div class="service-card">
-                <div class="service-image-placeholder">
-                    <p>[Imagen: Un equipo de expertos instalando una cama de salto de alta calidad.]</p>
-                </div>
-                <div class="service-content">
-                    <h3>Venta e Instalación de Juegos Tubulares</h3>
-                    <p>Ofrecemos un amplio catálogo de estructuras tubulares de la más alta calidad. Nuestro equipo de instaladores expertos se asegura de que cada proyecto se ensamble con la máxima precisión y siguiendo los más altos estándares de seguridad.</p>
-                    <ul>
-                        <li>Catálogo con variedad de modelos</li>
-                        <li>Instalación profesional y segura</li>
-                        <li>Cumplimiento de normativas de seguridad</li>
-                        <li>Garantía en todos nuestros productos</li>
-                    </ul>
-                </div>
-            </div>
+<!-- Servicio 2: Diseño y Mantenimiento -->
+<div class="service-card" data-full-image-url="images/Laberinto.jpeg">
+    <div class="service-image-container">
+        <img src="images/Laberinto.jpeg" alt="Laberinto tubular de varios niveles en un salón de fiestas" class="service-card-image">
+    </div>
+    <div class="service-content">
+        <h3>Diseño, Fabricación y Mantenimiento Integral</h3>
+        <p>Transforma tu visión en una realidad duradera. Trabajamos contigo desde el diseño conceptual hasta la fabricación e instalación...</p>
+        <ul>
+            <li>Diseños 100% personalizados y asesoría en distribución de espacio.</li>
+            <li>Materiales de alta resistencia, no tóxicos y de uso rudo.</li>
+            <li>Planes de mantenimiento preventivo para alargar la vida útil del juego.</li>
+            <li>Reparación y sustitución de redes, protectores y piezas desgastadas.</li>
+        </ul>
+    </div>
+</div>
 
-            <!-- Servicio 3 -->
-            <div class="service-card">
-                <div class="service-image-placeholder">
-                    <p>[Imagen: Un técnico realizando el mantenimiento preventivo de una red de juego.]</p>
-                </div>
-                <div class="service-content">
-                    <h3>Mantenimiento y Reparación</h3>
-                    <p>Alarga la vida útil de tu inversión y garantiza la seguridad continua de tus instalaciones. Ofrecemos planes de mantenimiento preventivo y servicios de reparación para mantener tu área de juegos en perfectas condiciones operativas.</p>
-                    <ul>
-                        <li>Planes de mantenimiento flexibles</li>
-                        <li>Reparación de redes, protectores y estructuras</li>
-                        <li>Sustitución de piezas desgastadas</li>
-                        <li>Inspecciones de seguridad detalladas</li>
-                    </ul>
-                </div>
-            </div>
+<!-- Servicio 3: Canchas Deportivas -->
+<div class="service-card" data-full-image-url="images/Cancha.jpeg">
+    <div class="service-image-container">
+        <img src="images/Cancha.jpeg" alt="Cancha de fútbol rápido con pasto sintético" class="service-card-image">
+    </div>
+    <div class="service-content">
+        <h3>Diseño y Construcción de Canchas Deportivas</h3>
+        <p>Expandimos la diversión más allá de los laberintos con la construcción de canchas deportivas, especializándonos en fútbol rápido...</p>
+        <ul>
+            <li>Instalación de pasto sintético de alta durabilidad.</li>
+            <li>Estructuras perimetrales y porterías a la medida.</li>
+            <li>Mallas de protección superiores y laterales para un juego seguro.</li>
+            <li>Soluciones adaptables a cualquier espacio interior o exterior.</li>
+        </ul>
+    </div>
+</div>
 
-            <!-- Servicio 4 -->
-            <div class="service-card">
-    <div class="service-image-placeholder">
-        <p>[Imagen: Una vibrante área de camas de salto con secciones planas e inclinadas, rodeada de mallas de seguridad.]</p>
+<!-- Servicio 4: Áreas de Trampolines -->
+<!-- He añadido una imagen de placeholder, ¡recuerda cambiarla! -->
+<div class="service-card" data-full-image-url="images/placeholder-trampolin.jpeg">
+    <div class="service-image-container">
+        <img src="images/placeholder-trampolin.jpeg" alt="Área de camas de salto con secciones planas e inclinadas" class="service-card-image">
     </div>
     <div class="service-content">
         <h3>Diseño y Fabricación de Áreas de Trampolines</h3>
-        <p>Impulsa la energía de tu negocio con nuestras áreas de camas de salto, diseñadas para ofrecer máxima diversión con la seguridad como prioridad. Desde un trampolín individual hasta complejos de salto interconectados, fabricamos soluciones a la medida para salones de fiestas, gimnasios y centros de entretenimiento.</p>
+        <p>Impulsa la energía de tu negocio con nuestras áreas de camas de salto, diseñadas para ofrecer máxima diversión con la seguridad como prioridad...</p>
         <ul>
-            <li>Estructuras de PTR soldado de alta resistencia para máxima durabilidad.</li>
+            <li>Estructuras de PTR soldado de alta resistencia.</li>
             <li>Diseños personalizados: camas planas, inclinadas e interconectadas.</li>
             <li>Colchonetas de alto impacto y mallas de seguridad perimetrales.</li>
-            <li>Soluciones perfectas para maximizar el espacio y la rentabilidad de tu área.</li>
+            <li>Soluciones perfectas para maximizar el espacio y la rentabilidad.</li>
         </ul>
     </div>
 </div>
@@ -98,10 +111,11 @@
     <footer>
         <section id="contacto">
             <h2>Contacto</h2>
-            <p>Para contactar al desarrollador, por favor envíe un correo a <a href="mailto:desarrollador@example.com">desarrollador@example.com</a>.</p>
+            <p>Para contactar al desarrollador, por favor envíe un correo a francisco.a.gallegosv@gmail.com</a>.</p>
         </section>
     </footer>
 
     <script src="js/main.js"></script>
+    <script src="js/api.js"></script>
 </body>
 </html>
