--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="paint-splats-background">
+            <img src="/images/splats/splat-blue.png" alt="Mancha de pintura azul" class="paint-splat splat-1">
+            <img src="/images/splats/splat-yellow.png" alt="Mancha de pintura amarilla" class="paint-splat splat-2">
+            <img src="/images/splats/splat-red.png" alt="Mancha de pintura roja" class="paint-splat splat-3">
+            <img src="/images/splats/splat-green.png" alt="Mancha de pintura verde" class="paint-splat splat-4">
+            <img src="/images/splats/splat-pink.png" alt="Mancha de pintura rosa" class="paint-splat splat-5">
+            <img src="/images/splats/splat-purple.png" alt="Mancha de pintura morada" class="paint-splat splat-6">
+            <img src="/images/splats/splat-cyan.png" alt="Mancha de pintura cyan" class="paint-splat splat-7">
+
+        </div>
     <header>
         <nav>
             <ul>
@@ -54,10 +64,10 @@
         <p>Confiamos en nuestra capacidad para transformar cualquier espacio en una aventura. Permítenos ser parte de tu próximo gran proyecto y construyamos juntos el lugar donde nacerán las próximas grandes sonrisas.</p>
     </main>
 
-    <footer>
+   <footer>
         <section id="contacto">
             <h2>Contacto</h2>
-            <p>Para contactar al desarrollador, por favor envíe un correo a <a href="mailto:desarrollador@example.com">desarrollador@example.com</a>.</p>
+            <p>Para contactar al desarrollador, por favor envíe un correo a francisco.a.gallegosv@gmail.com</a>.</p>
         </section>
     </footer>
 
