--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <div class="paint-splats-background">
+            <img src="/images/splats/splat-blue.png" alt="Mancha de pintura azul" class="paint-splat splat-1">
+            <img src="/images/splats/splat-yellow.png" alt="Mancha de pintura amarilla" class="paint-splat splat-2">
+            <img src="/images/splats/splat-red.png" alt="Mancha de pintura roja" class="paint-splat splat-3">
+            <img src="/images/splats/splat-green.png" alt="Mancha de pintura verde" class="paint-splat splat-4">
+            <img src="/images/splats/splat-pink.png" alt="Mancha de pintura rosa" class="paint-splat splat-5">
+            <img src="/images/splats/splat-purple.png" alt="Mancha de pintura morada" class="paint-splat splat-6">
+            <img src="/images/splats/splat-cyan.png" alt="Mancha de pintura cyan" class="paint-splat splat-7">
+
+        </div>
+    <header class="header">
         <nav>
             <ul>
                 <li><a href="servicios.html">Servicios</a></li>
@@ -19,6 +29,7 @@
                 <li><a href="http://localhost:5071/" target="_blank">Admin Panel</a></li>
             </ul>
         </nav>
+        
     </header>
 
     <main>
@@ -36,11 +47,10 @@
 
     </section>
 </main>
-
     <footer>
         <section id="contacto">
             <h2>Contacto</h2>
-            <p>Para contactar al desarrollador, por favor envíe un correo a <a href="mailto:desarrollador@example.com">desarrollador@example.com</a>.</p>
+            <p>Para contactar al desarrollador, por favor envíe un correo a francisco.a.gallegosv@gmail.com</a>.</p>
         </section>
     </footer>
 
