Rediseño de nuevo

--- a/servicios.html
+++ b/servicios.html
@@ -55,9 +55,9 @@
 </div>
 
 <!-- Servicio 2: Diseño y Mantenimiento -->
-<div class="service-card" data-full-image-url="images/Laberinto.jpeg">
+<div class="service-card" data-full-image-url="images/Laberinto.png">
     <div class="service-image-container">
-        <img src="images/Laberinto.jpeg" alt="Laberinto tubular de varios niveles en un salón de fiestas" class="service-card-image">
+        <img src="images/Laberinto.png" alt="Laberinto tubular de varios niveles en un salón de fiestas" class="service-card-image">
     </div>
     <div class="service-content">
         <h3>Diseño, Fabricación y Mantenimiento Integral</h3>
