Ahora si el deploy

--- a/contacto.html
+++ b/contacto.html
@@ -38,22 +38,16 @@
         <div class="contact-info-centered">
             <h3>Información de Contacto</h3>
             <p><strong>Correo:</strong> mario.a.gallegos@hotmail.com</p>
-            <p><strong>Teléfono:</strong> +123 456 7890</p>
+            <p><strong>Teléfono:</strong> +52 81 2864 8379</p>
 
         <div class="social-media">
             <h3>Síguenos en Redes Sociales</h3>
             <div class="social-link">
-                <a href="#">
+                <a href="https://www.facebook.com/people/Laberintos-Praderas/100057533864298/">
                     <img src="images/social/facebook.webp" alt="Facebook">
                     <span>@LaberintosPraderas</span>
                 </a>
             </div>
-            <div class="social-link">
-                <a href="#">
-                    <img src="images/social/instagram.webp" alt="Instagram">
-                    <span>@LaberintosPraderas</span>
-                </a>
-        </div>
     </main>
 
     <footer>
