--- a/servicios.html
+++ b/servicios.html
@@ -89,10 +89,9 @@
 </div>
 
 <!-- Servicio 4: Áreas de Trampolines -->
-<!-- He añadido una imagen de placeholder, ¡recuerda cambiarla! -->
-<div class="service-card" data-full-image-url="images/placeholder-trampolin.jpeg">
+<div class="service-card" data-full-image-url="images/trampolin.jpeg">
     <div class="service-image-container">
-        <img src="images/placeholder-trampolin.jpeg" alt="Área de camas de salto con secciones planas e inclinadas" class="service-card-image">
+        <img src="images/trampolin.jpeg" alt="Área de camas de salto con secciones planas e inclinadas" class="service-card-image">
     </div>
     <div class="service-content">
         <h3>Diseño y Fabricación de Áreas de Trampolines</h3>
