--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -26,7 +26,7 @@
                 <li class="logo-li"><a href="index.html"><img src="images/logo.png" alt="Logo" class="logo-img"></a></li>
                 <li><a href="sobre-nosotros.html">Sobre nosotros</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="http://localhost:5071/" target="_blank">Admin Panel</a></li>
+                <li><a href="https://app.laberintospraderas.com" target="_blank">Admin Panel</a></li>
             </ul>
         </nav>
     </header>
