bloqueamos el slide horizontal y añadimos el js de preview

--- a/portafolio.html
+++ b/portafolio.html
@@ -68,6 +68,7 @@
 
 
     <script src="js/main.js"></script>
+       <script src="js/ui-interactions.js"></script>
     <!-- NUEVO SCRIPT DEDICADO PARA LLAMAR A LA API -->
     <script src="js/api.js"></script>
 </body>
