--- a/Cliente-detalle.html
+++ b/Cliente-detalle.html
@@ -32,7 +32,7 @@
     <footer>
         <section id="contacto">
             <h2>Contacto</h2>
-            <p>Para contactar al desarrollador, por favor envíe un correo a <a href="mailto:francisco.a.gallegosv@gmail.com">./a>.</p>
+            <p>Para contactar al desarrollador, por favor envíe un correo a <a href="mailto:francisco.a.gallegosv@gmail.com">francisco.a.gallegosv@gmail.com</a>.</p>
         </section>
     </footer>
     
